--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>org.jenkins-ci.modules</groupId>
   <artifactId>instance-identity</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>hpi</packaging>
+  <packaging>jenkins-module</packaging>
   <name>Instance Identity</name>
   <description>Maintains an RSA key pair that can serve as a foundation of authentication when communicating with Jenkins</description>
 
@@ -20,6 +20,17 @@
     <connection>scm:git:git://github.com/jenkinsci/instance-identity-module.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/instance-identity-module.git</developerConnection>
   </scm>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jenkins-ci.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>1.66</version>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
