--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <!--
-      build the nectar branch and also run "mvn install" in its plugins/ folder
-    -->
-    <version>1.402-SNAPSHOT</version>
+    <version>1.400</version>
   </parent>
 
   <groupId>org.jenkins-ci.modules</groupId>
