--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>bouncycastle</groupId>
-      <artifactId>bcprov-jdk15</artifactId>
-      <version>140</version>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+      <version>1.47</version>
     </dependency>
   </dependencies>
 </project>
