--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
   <description>Maintains an RSA key pair that can serve as a foundation of authentication when communicating with Jenkins</description>
 
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/instance-identity-module.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/instance-identity-module.git</developerConnection>
+    <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-module.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/${project.artifactId}-module.git</developerConnection>
   </scm>
 
   <licenses>
