--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
   <name>Instance Identity</name>
   <description>Maintains an RSA key pair that can serve as a foundation of authentication when communicating with Jenkins</description>
 
+  <properties>
+    <jenkins.version>2.7</jenkins.version>
+  </properties>
+
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-module.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/${project.artifactId}-module.git</developerConnection>
@@ -28,9 +32,10 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcpkix-jdk15on</artifactId>
-      <version>1.54</version>
+       <groupId>org.jenkins-ci.plugins</groupId>
+       <artifactId>bouncycastle-api</artifactId>
+       <version>1.1-SNAPSHOT</version>
+       <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
