--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
   <properties>
     <jenkins.version>2.16</jenkins.version>
+    <java.level>8</java.level>
   </properties>
 
   <dependencies>
