--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.github.stephenc.crypto</groupId>
-      <artifactId>self-signed-cert-generator</artifactId>
-      <version>1.0.0</version>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>bouncycastle-api</artifactId>
+      <version>2.18</version>
     </dependency>
   </dependencies>
 </project>
