--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <packaging>hpi</packaging>
 
   <name>Instance Identity</name>
-  <url>https://github.com/jenkinsci/${project.artifactId}-module</url> <!-- TODO -module → -plugin -->
+  <url>https://github.com/jenkinsci/${project.artifactId}-module</url>
   <licenses>
     <license>
       <name>MIT License</name>
@@ -35,7 +35,7 @@
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.280</jenkins.version>
     <java.level>8</java.level>
-    <gitHubRepo>jenkinsci/${project.artifactId}-module</gitHubRepo> <!-- TODO -module → -plugin -->
+    <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
   </properties>
 
   <repositories>
