--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.jenkins-ci.modules</groupId>
   <artifactId>instance-identity</artifactId>
-  <version>3.2</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
 
   <name>Instance Identity</name>
@@ -27,11 +27,11 @@
     <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>instance-identity-3.2</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <properties>
-    <revision>3.2</revision>
+    <revision>3.3</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.348</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
